fixed:switcher top spacing mobile

--- a/themes/inbeat/assets/scss/pages/_switchers.scss
+++ b/themes/inbeat/assets/scss/pages/_switchers.scss
@@ -4,7 +4,7 @@
             padding-top: 144px;
         }
         @include breakpoint(sm-down) {
-            padding-top: 96px;
+            padding-top: 60px;
             margin: 0;
         }
     }
